@@ -11,10 +11,6 @@
 #include <gtk/gtkvbox.h>
 #include <matchbox-panel/mb-panel.h>
 
-#ifdef USE_LIBNOTIFY
-  #include <libnotify/notify.h>
-#endif
-
 #include "na-tray-manager.h"
 
 /* We need to force the redraw like this because gtk_widget_queue_draw ()
@@ -46,111 +42,6 @@ tray_icon_added_cb (NaTrayManager *manager,
         force_icon_redraw (GTK_WIDGET (box));
 }
 
-#ifdef USE_LIBNOTIFY
-/* Notification closed */
-static void
-notification_closed_cb (NotifyNotification *n,
-                        GtkWidget          *icon)
-{
-        GHashTable *hash;
-        gpointer id;
-
-        /* Remove reference to notification */
-        hash = g_object_get_data (G_OBJECT (icon), "notification-hash");
-        g_assert (hash);
-
-        id = g_object_get_data (G_OBJECT (n), "id");
-
-        g_hash_table_remove (hash, id);
-}
-
-/* Message sent */
-static void
-message_sent_cb (NaTrayManager      *manager,
-                 GtkWidget           *icon,
-                 const char          *message,
-                 long                 id,
-                 long                 timeout,
-                 gpointer             user_data)
-{
-        GHashTable *hash;
-        NotifyNotification *n;
-        GError *error;
-
-        /* Create notification */
-        n = notify_notification_new (message,
-                                     NULL,
-                                     NULL,
-                                     icon);
-        notify_notification_set_timeout (n, timeout);
-
-        error = NULL;
-        if (!notify_notification_show (n, &error)) {
-                g_warning (error->message);
-
-                g_error_free (error);
-
-                g_object_unref (n);
-
-                return;
-        }
-
-        /* Keep a reference to the notification */
-        hash = g_object_get_data (G_OBJECT (icon), "notification-hash");
-        if (!hash) {
-                hash = g_hash_table_new_full (g_int_hash,
-                                              g_int_equal,
-                                              NULL,
-                                              (GDestroyNotify) g_object_unref);
-
-                g_object_set_data_full (G_OBJECT (icon),
-                                        "notification-hash",
-                                        hash,
-                                        (GDestroyNotify) g_hash_table_destroy);
-        }
-
-        g_hash_table_insert (hash, GINT_TO_POINTER (id), n);
-
-        /* Make sure the notification is removed from the hash once
-         * closed */
-        g_object_set_data (G_OBJECT (n), "id", GINT_TO_POINTER (id));
-        g_signal_connect (n,
-                          "closed",
-                          G_CALLBACK (notification_closed_cb),
-                          icon);
-}
-
-/* Message cancelled */
-static void
-message_cancelled_cb (NaTrayManager *manager,
-                      GtkWidget      *icon,
-                      long            id,
-                      gpointer        user_data)
-{
-        GHashTable *hash;
-        NotifyNotification *n;
-        GError *error;
-        
-        /* Look up reference to notification */
-        hash = g_object_get_data (G_OBJECT (icon), "notification-hash");
-        if (!hash)
-                return;
-
-        n = g_hash_table_lookup (hash, GINT_TO_POINTER (id));
-        if (!n)
-                return;
-
-        /* Close it */
-        error = NULL;
-        notify_notification_close (n, &error);
-        if (error) {
-                g_warning (error->message);
-
-                g_error_free (error);
-        }
-}
-#endif
-
 /* Screen changed */
 static void
 screen_changed_cb (GtkWidget      *widget,
@@ -179,11 +70,6 @@ mb_panel_applet_create (const char    *id,
         NaTrayManager *manager;
         GtkWidget *box;
 
-#ifdef USE_LIBNOTIFY
-        if (!notify_is_initted ())
-                notify_init ("matchbox-panel");
-#endif
-
         /* Is this a horizontal panel? */
         if (orientation == GTK_ORIENTATION_HORIZONTAL)
                 box = gtk_hbox_new (0, FALSE);
@@ -200,17 +86,6 @@ mb_panel_applet_create (const char    *id,
                           "tray-icon-added",
                           G_CALLBACK (tray_icon_added_cb),
                           box);
-
-#ifdef USE_LIBNOTIFY
-        g_signal_connect (manager,
-                          "message-sent",
-                          G_CALLBACK (message_sent_cb),
-                          NULL);
-        g_signal_connect (manager,
-                          "message-cancelled",
-                          G_CALLBACK (message_cancelled_cb),
-                          NULL);
-#endif
 
         g_signal_connect (box,
                           "screen-changed",
